Fix size of offersList component to eliminate page flickering when fetching data

--- a/client/src/pages/OfferModeration/OfferModeration.module.sass
+++ b/client/src/pages/OfferModeration/OfferModeration.module.sass
@@ -35,6 +35,8 @@
     display: flex
     justify-content: center
     width: 100%
+    min-height: 70vh
+    word-break: break-word
   .filterContainer
     display: flex
     flex-direction: column
